Replace remaining deprecated Class.newInstance() calls
- QueryIterator.java: c.newInstance() -> c.getDeclaredConstructor().newInstance()
- AggregatingReducer.java: clazz.newInstance() -> clazz.getDeclaredConstructor().newInstance()
- Updated exception handling in related methods and overrides